--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         build: ./Web/network-tools/src
         restart: always
         ports:
-            - 10001:80
+            - ${LIP:-0.0.0.0}:10001:80
         volumes:
             - ./Web/network-tools/flag:/flag:ro
 
@@ -14,13 +14,13 @@ services:
         build: ./Web/read-later/src
         restart: always
         ports:
-            - 10002:80
+            - ${LIP:-0.0.0.0}:10002:80
         env_file: ./Web/read-later/.env
 
     web-render-html:
         build: ./Web/render-html/src
         restart: always
         ports:
-            - 10003:80
+            - ${LIP:-0.0.0.0}:10003:80
         volumes:
             - ./Web/render-html/flag:/flag:ro
