change to uwsgi

--- a/Web/read-later/src/Dockerfile
+++ b/Web/read-later/src/Dockerfile
@@ -7,4 +7,4 @@ RUN python -m pip install --no-cache-dir -r requirements.txt
 COPY ./ ./
 
 USER daemon
-CMD gunicorn -b 0.0.0.0:80 main:app
+CMD uwsgi --wsgi-file main.py --callable app --http :80 --processes 8 --threads 4
