--- a/Web/network-tools/src/Dockerfile
+++ b/Web/network-tools/src/Dockerfile
@@ -3,3 +3,4 @@ FROM php:8.0-apache
 RUN apt-get update && apt-get install --no-install-recommends -y dnsutils inetutils-ping traceroute mtr whois && rm -rf /var/lib/apt/lists/*
 
 COPY ./ /var/www/html/
+RUN chmod -R 555 /var/www/html/
